--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -36,7 +36,7 @@
     border-color: #3aaa5e;
   }
 
-  h3 {
+  h2 {
     margin-top: 0;
     font-size: 1rem;
     font-weight: 600;
